# esp-arkui

./: .gitignore  README.md
components/ability_lite/: CMakeLists.txt
components/ace_engine_lite/: CMakeLists.txt
components/bounds_checking_function/: CMakeLists.txt
components/freetype/: CMakeLists.txt  project_include.cmake
components/icu/: CMakeLists.txt
components/jerryscript/: CMakeLists.txt
components/libjpeg-turbo/: CMakeLists.txt  project_include.cmake
components/libpng/: CMakeLists.txt  project_include.cmake
components/porting/: CMakeLists.txt  cmsis_os.h  cmsis_os2.h  log.c  log.h  los_task.h  product_acelite_config.h
components/porting/js-port/: jerry_console.c  jerry_util.c
components/porting/kal/: kal.c  kal.h
components/qrcodegen/: CMakeLists.txt
components/ui_lite/: CMakeLists.txt
components/zlib/: CMakeLists.txt
examples/esp-demo/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/esp-demo/main/: CMakeLists.txt  idf_component.yml  main.c  real_time_stats.c
examples/esp-demo/main/ui_port/: ability_js.cpp  display_device.cpp  display_device.h  touch_input.cpp  touch_input.h  ui_main.cpp
examples/esp-demo/rootfs/MainAbility/: app.js  app.js.map  manifest.json
examples/esp-demo/rootfs/MainAbility/pages/index/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/: app.js  app.js.map  manifest.json  preview_css.json
examples/esp-demo/rootfs/showcase/pages/component/animation/animation1/: animation1.js  animation1.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/animation2/: animation2.js  animation2.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/animation3/: animation3.js  animation3.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/animation4/: animation4.js  animation4.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/animation5/: animation5.js  animation5.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/animation6/: animation6.js  animation6.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/animation7/: animation7.js  animation7.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/index/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/index1/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/animation/index2/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas1/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas2/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas3/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas4/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas5/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas6/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas7/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas8/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/canvas9/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/index/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/indexAPI/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/indexAPIAttr/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/indexAPIDraw/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/indexAttr/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/indexCommonStyle/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/canvas/indexEvent/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/chart/index/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div1/: div1.js  div1.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div10/: div10.js  div10.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div11/: div11.js  div11.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div12/: div12.js  div12.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div2/: div2.js  div2.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div3/: div3.js  div3.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div4/: div4.js  div4.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div5/: div5.js  div5.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div6/: div6.js  div6.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div7/: div7.js  div7.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div8/: div8.js  div8.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/div9/: div9.js  div9.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/index/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/indexAttr/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/indexCommonStyle/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/indexEvent/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/div/indexSpecStyle/: index.js  index.js.map
examples/esp-demo/rootfs/showcase/pages/component/image/image1/: image1.js  image1.js.map
examples/esp-demo/rootfs/showcase/pages/component/image/image2/: image2.js  image2.js.map
examples/esp-demo/rootfs/showcase/pages/component/image/image3/: image3.js  image3.js.map
examples/esp-demo/rootfs/showcase/pages/component/image/image4/: image4.js  image4.js.map
examples/esp-demo/rootfs/showcase/pages/component/image/image5/: image5.js  image5.js.map
examples/esp-demo/rootfs/showcase/pages/index/: index.js  index.js.map
(+336 files in other folders)
