

set(TARGET_DIR ${ARKUILIB_DIR}/third_party/jerryscript)

set(SRCS 
${TARGET_DIR}/jerry-core/api/jerry-debugger-transport.c
${TARGET_DIR}/jerry-core/api/jerry-debugger.c
${TARGET_DIR}/jerry-core/api/jerry-snapshot.c
${TARGET_DIR}/jerry-core/api/jerry.c
${TARGET_DIR}/jerry-core/debugger/debugger.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-alloc.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-gc.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-collection.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-conversion.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-errol.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-external-pointers.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-number.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-string.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers-value.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-helpers.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-init-finalize.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-lcache.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-literal-storage.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-module.c
${TARGET_DIR}/jerry-core/ecma/base/ecma-property-hashmap.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-array-iterator-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-array-prototype-unscopables.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-arraybuffer-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-arraybuffer.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-boolean-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-boolean.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-dataview-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-dataview.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-date-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-date.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-error-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-error.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-evalerror-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-evalerror.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-function-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-function.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-generator-function.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-generator-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-generator.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-global.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-helpers-date.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-helpers-error.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-helpers-json.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-helpers-sort.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-helpers.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-intrinsic.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-iterator-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-json.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-map-iterator-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-map-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-map.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-math.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-number-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-number.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-object-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-object.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-promise-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-promise.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-proxy.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-rangeerror-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-rangeerror.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-referenceerror-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-referenceerror.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-reflect.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-regexp-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-regexp.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-set-iterator-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-set-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-set.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-string-iterator-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-string-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-string.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-symbol-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-symbol.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-syntaxerror-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-syntaxerror.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-type-error-thrower.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-typeerror-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-typeerror.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-urierror-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-urierror.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-weakmap-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-weakmap.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-weakset-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtin-weakset.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/ecma-builtins.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-float32array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-float32array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-float64array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-float64array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-int16array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-int16array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-int32array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-int32array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-int8array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-int8array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-typedarray-helpers.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-typedarray-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-typedarray.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint16array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint16array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint32array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint32array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint8array-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint8array.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint8clampedarray-prototype.c
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray/ecma-builtin-uint8clampedarray.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-array-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-arraybuffer-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-boolean-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-comparison.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-container-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-conversion.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-dataview-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-eval.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-exceptions.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-function-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-get-put-value.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-iterator-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-jobqueue.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-lex-env.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-number-arithmetic.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-number-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-objects-arguments.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-objects-general.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-objects.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-promise-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-proxy-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-reference.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-regexp-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-string-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-symbol-object.c
${TARGET_DIR}/jerry-core/ecma/operations/ecma-typedarray-object.c
${TARGET_DIR}/jerry-core/ext/ext-utils.c
${TARGET_DIR}/jerry-core/ext/heapdump.c
${TARGET_DIR}/jerry-core/ext/tracker.c
${TARGET_DIR}/jerry-core/jcontext/jcontext.c
${TARGET_DIR}/jerry-core/jmem/jmem-allocator.c
${TARGET_DIR}/jerry-core/jmem/jmem-heap.c
${TARGET_DIR}/jerry-core/jmem/jmem-poolman.c
${TARGET_DIR}/jerry-core/jrt/jrt-fatals.c
${TARGET_DIR}/jerry-core/lit/lit-char-helpers.c
${TARGET_DIR}/jerry-core/lit/lit-magic-strings.c
${TARGET_DIR}/jerry-core/lit/lit-strings.c
${TARGET_DIR}/jerry-core/parser/js/byte-code.c
${TARGET_DIR}/jerry-core/parser/js/common.c
${TARGET_DIR}/jerry-core/parser/js/js-lexer.c
${TARGET_DIR}/jerry-core/parser/js/js-parser-expr.c
${TARGET_DIR}/jerry-core/parser/js/js-parser-mem.c
${TARGET_DIR}/jerry-core/parser/js/js-parser-module.c
${TARGET_DIR}/jerry-core/parser/js/js-parser-statm.c
${TARGET_DIR}/jerry-core/parser/js/js-parser-tagged-template-literal.c
${TARGET_DIR}/jerry-core/parser/js/js-parser-util.c
${TARGET_DIR}/jerry-core/parser/js/js-parser.c
${TARGET_DIR}/jerry-core/parser/js/js-scanner-ops.c
${TARGET_DIR}/jerry-core/parser/js/js-scanner-util.c
${TARGET_DIR}/jerry-core/parser/js/js-scanner.c
${TARGET_DIR}/jerry-core/parser/regexp/re-bytecode.c
${TARGET_DIR}/jerry-core/parser/regexp/re-compiler.c
${TARGET_DIR}/jerry-core/parser/regexp/re-parser.c
${TARGET_DIR}/jerry-core/vm/opcodes-ecma-arithmetics.c
${TARGET_DIR}/jerry-core/vm/opcodes-ecma-bitwise.c
${TARGET_DIR}/jerry-core/vm/opcodes-ecma-relational-equality.c
${TARGET_DIR}/jerry-core/vm/opcodes.c
${TARGET_DIR}/jerry-core/vm/vm-stack.c
${TARGET_DIR}/jerry-core/vm/vm-utils.c
${TARGET_DIR}/jerry-core/vm/vm.c
${TARGET_DIR}/jerry-ext/arg/arg-js-iterator-helper.c
${TARGET_DIR}/jerry-ext/arg/arg-transform-functions.c
${TARGET_DIR}/jerry-ext/arg/arg.c
${TARGET_DIR}/jerry-ext/debugger/debugger-common.c
${TARGET_DIR}/jerry-ext/debugger/debugger-rp.c
${TARGET_DIR}/jerry-ext/debugger/debugger-serial.c
${TARGET_DIR}/jerry-ext/debugger/debugger-sha1.c
${TARGET_DIR}/jerry-ext/debugger/debugger-tcp.c
${TARGET_DIR}/jerry-ext/debugger/debugger-ws.c
${TARGET_DIR}/jerry-ext/handle-scope/handle-scope-allocator.c
${TARGET_DIR}/jerry-ext/handle-scope/handle-scope.c
${TARGET_DIR}/jerry-ext/handler/handler-assert.c
${TARGET_DIR}/jerry-ext/handler/handler-gc.c
${TARGET_DIR}/jerry-ext/handler/handler-print.c
${TARGET_DIR}/jerry-ext/handler/handler-register.c
${TARGET_DIR}/jerry-ext/module/module.c
${TARGET_DIR}/jerry-ext/handler/handler-resource-name.c
#$${TARGET_DIR}/jerry-libm/acos.c
#$${TARGET_DIR}/jerry-libm/acosh.c
#$${TARGET_DIR}/jerry-libm/asin.c
#$${TARGET_DIR}/jerry-libm/asinh.c
#$${TARGET_DIR}/jerry-libm/atan.c
#$${TARGET_DIR}/jerry-libm/atan2.c
#$${TARGET_DIR}/jerry-libm/atanh.c
#$${TARGET_DIR}/jerry-libm/cbrt.c
#$${TARGET_DIR}/jerry-libm/ceil.c
#$${TARGET_DIR}/jerry-libm/copysign.c
#$${TARGET_DIR}/jerry-libm/cosh.c
#$${TARGET_DIR}/jerry-libm/exp.c
#$${TARGET_DIR}/jerry-libm/expm1.c
#$${TARGET_DIR}/jerry-libm/fabs.c
#$${TARGET_DIR}/jerry-libm/finite.c
#$${TARGET_DIR}/jerry-libm/floor.c
#$${TARGET_DIR}/jerry-libm/fmod.c
#$${TARGET_DIR}/jerry-libm/isnan.c
#$${TARGET_DIR}/jerry-libm/log.c
#$${TARGET_DIR}/jerry-libm/log10.c
#$${TARGET_DIR}/jerry-libm/log1p.c
#$${TARGET_DIR}/jerry-libm/log2.c
#$${TARGET_DIR}/jerry-libm/nextafter.c
#$${TARGET_DIR}/jerry-libm/pow.c
#$${TARGET_DIR}/jerry-libm/scalbn.c
#$${TARGET_DIR}/jerry-libm/sinh.c
#$${TARGET_DIR}/jerry-libm/sqrt.c
#$${TARGET_DIR}/jerry-libm/tanh.c
#$${TARGET_DIR}/jerry-libm/trig.c
${TARGET_DIR}/jerry-port/default/default-date.c
${TARGET_DIR}/jerry-port/default/default-debugger.c
${TARGET_DIR}/jerry-port/default/default-external-context.c
${TARGET_DIR}/jerry-port/default/default-fatal.c
${TARGET_DIR}/jerry-port/default/default-io.c
${TARGET_DIR}/jerry-port/default/default-module.c
)

set(INCLUDE_DIRS 
${TARGET_DIR}/jerry-core/include
${TARGET_DIR}/jerry-core/api
${TARGET_DIR}/jerry-core/debugger
${TARGET_DIR}/jerry-core/ecma/base
${TARGET_DIR}/jerry-core/ecma/builtin-objects
${TARGET_DIR}/jerry-core/ecma/builtin-objects/typedarray
${TARGET_DIR}/jerry-core/ecma/operations
${TARGET_DIR}/jerry-core/ext
${TARGET_DIR}/jerry-core/jcontext
${TARGET_DIR}/jerry-core/jmem
${TARGET_DIR}/jerry-core/jrt
${TARGET_DIR}/jerry-core/lit
${TARGET_DIR}/jerry-core/parser
${TARGET_DIR}/jerry-core/parser/js
${TARGET_DIR}/jerry-core/parser/regexp
${TARGET_DIR}/jerry-core/vm
${TARGET_DIR}/jerry-core
${TARGET_DIR}/jerry-ext/include/jerryscript-ext
${TARGET_DIR}/jerry-ext/debugger
${TARGET_DIR}/jerry-ext/common
${TARGET_DIR}/jerry-ext/include
${TARGET_DIR}/jerry-ext/arg
${TARGET_DIR}/jerry-ext/handle-scope
${TARGET_DIR}/jerry-port/default/include
)


idf_component_register(
    SRCS ${SRCS}
    INCLUDE_DIRS ${INCLUDE_DIRS}
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC 
JERRY_CPOINTER_32_BIT=0
JERRY_DEBUGGER=0
JERRY_ES2015=1
JERRY_ES2015_BUILTIN_SET=1
JERRY_EXTERNAL_CONTEXT=1
JERRY_FUNCTION_BACKTRACE
JERRY_FUNCTION_NAME
JERRY_GC_LIMIT=0
JERRY_LINE_INFO=1
JERRY_MEM_GC_BEFORE_EACH_ALLOC=0
JERRY_NDEBUG
JERRY_PARSER=1
JERRY_PARSER_DUMP_BYTE_CODE=0
JERRY_REF_TRACKER
JERRY_REGEXP_DUMP_BYTE_CODE=0
JERRY_REGEXP_STRICT_MODE=0
JERRY_STACK_LIMIT=0
JERRY_SYSTEM_ALLOCATOR=0
JERRY_VALGRIND=0
JERRY_VM_EXEC_STOP=0
)

target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-format)
